--- a/style/header.css
+++ b/style/header.css
@@ -12,8 +12,8 @@ header {
 }
 .banner {
   position: relative;
-  width: 75%;
-  height: 30vh;
+  width: 78%;
+  height: 26vh;
   overflow: hidden;
   margin: 0 auto;
 }
@@ -87,11 +87,11 @@ header {
 }
 #bunny-slide1 {
   /* coniglietto blu */
-  width: 30%;
+  width: 25%;
   height: 100%;
   object-fit: cover;
   float: right;
-  animation: fluttua 2s ease-in-out infinite;
+  animation: fluttua 6s ease-in-out infinite;
 }
 
 @keyframes fluttua {
@@ -99,7 +99,7 @@ header {
     transform: translate(0, 0);
   }
   50% {
-    transform: translate(0, 5px);
+    transform: translate(-3px, 5px);
   }
   100% {
     transform: translate(0, 0);
@@ -108,29 +108,29 @@ header {
 
 #coin-bottom {
   position: absolute;
-  top: 60%;
+  top: 56%;
   left: 50%;
-  transform: translate(-120%, 0%);
-  width: 20%;
+  transform: translate(-140%, 0%);
+  width: 18%;
 }
 #coin-top {
   position: absolute;
   top: 0%;
   left: 45%;
   transform: translate(-20%, 0%);
-  width: 18%;
+  width: 13%;
 }
 .framework-container {
   position: absolute;
   top: 50%;
-  left: 60%;
+  left: 65%;
   transform: translate(0%, -50%);
   width: 15%;
 }
 .framework-container img {
-  width: 100%;
+  width: 82%;
 }
-.framework-light{
+.framework-light {
   content: "";
   background-image: linear-gradient(
     90deg,
@@ -139,7 +139,7 @@ header {
     rgba(204, 204, 204, 0.082) 80px
   );
   position: absolute;
-  width: 100%;
+  width: 83%;
   height: 96%;
   background-position: 100% 0;
   background-size: 300%;
@@ -154,10 +154,10 @@ header {
 }
 
 /* animazione compare-scompare */
-#star1, #star2 {
+#star1,
+#star2 {
   opacity: 1;
   animation-name: fade-out-in;
-  animation-duration: 4s;
   animation-iteration-count: infinite;
 }
 
@@ -165,19 +165,34 @@ header {
   0% {
     opacity: 1;
   }
+  25% {
+    opacity: 0.5;
+  }
   50% {
     opacity: 0;
+  }
+  75% {
+    opacity: 0.5;
   }
   100% {
     opacity: 1;
   }
 }
-#star1{
+#star1 {
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  transform: translate(65%, -30%);
+  width: 4.8%;
+  animation-duration: 3.5s;
+}
+#star2 {
   position: absolute;
   top: 70%;
-  left: 55%;
-  transform: translate(0%, -50%);
-  width: 5%;
+  left: 58%;
+  transform: translate(0%, -30%);
+  width: 4.8%;
+  animation-duration: 3s;
 }
 
 .slide .caption {
