--- a/style/header.css
+++ b/style/header.css
@@ -35,6 +35,11 @@ header {
   height: 100%;
   position: relative;
   border-radius: 35px;
+  opacity: 0;
+  transition: opacity 0.2s linear;
+}
+.slide.active{
+  opacity: 1;
 }
 .slide1 {
   background: linear-gradient(
@@ -406,6 +411,7 @@ header {
   width: 24px;
   height: 8px;
   background-color: #ffffff;
+  transition: all 0.2s ease-in-out;
 }
 .indicator:first-child {
   border-top-left-radius: 10px;
