--- a/style/header.css
+++ b/style/header.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 header {
-  background-color: #1b1d1f;
+  background-color: #ecf6ff;
   width: 100%;
   height: 100vh;
 }
@@ -420,4 +420,10 @@ header {
 .indicator:last-child {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+/* MOON SECTION */
+
+.moon{
+  background-color: #ecf6ff;
 }
