--- a/style/style_alfio.css
+++ b/style/style_alfio.css
@@ -13,7 +13,7 @@
     margin-bottom: 1.5rem;
 }
 
-.million-container > .million > h2 {
+.million-container > .million > h2, .win-container > .win > h2 {
     color: var(--h2-light-color);
     font-size: 2.3rem;
     font-weight: 600;
@@ -96,8 +96,25 @@
     background: linear-gradient(to bottom left, #D7CAEC 50%, #ffffff 50%);
 }
 
+.win-container {
+    height: 100vh;
+    background-image: linear-gradient(#6FB6F1, #e9f2f6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .win {
-    background-image: linear-gradient(#000000, #ffffff);
+    height: 606px;
+    width: 920px;
+    background-color:rgba(255, 255, 255, 0.5);
+    border-radius: 40px;
+    text-align: center;
+    padding: 2rem;
+}
+
+.win-container > .win > h2 > span {
+    color: var(--second-color);
 }
 
 @media screen and (max-width: 850px) {
