--- a/style/header.css
+++ b/style/header.css
@@ -8,9 +8,10 @@
 header {
   background-color: #ecf6ff;
   width: 100%;
-  height: 100vh;
+  height: 50vh;
+  padding-top: 5%;
 }
-.banner {
+.elephant {
   position: relative;
   width: 78%;
   height: 26.8vh; /*FIRST OVERFLOW*/
@@ -38,7 +39,7 @@ header {
   opacity: 0;
   transition: opacity 0.2s linear;
 }
-.slide.active{
+.slide.active {
   opacity: 1;
 }
 .slide1 {
@@ -424,6 +425,25 @@ header {
 
 /* MOON SECTION */
 
-.moon{
+.moon {
   background-color: #ecf6ff;
+}
+.moon #astro-bunny {
+  width: 40%;
+  position: absolute;
+  top: 42%;
+  left: 50%;
+  transform: translate(0%, 0%);
+  animation: fluttua-b 7s ease-in-out infinite;
+}
+@keyframes fluttua-b {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(10px, 10px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
 }
