--- a/style/style_alfio.css
+++ b/style/style_alfio.css
@@ -25,7 +25,7 @@
     margin-bottom: 2rem;
 }
 
-.million-container > .million > p, .text-description > p {
+.million-container > .million > p, .text-description > p, .win-container > .win > p{
     color: var(--paragraf-color);
     line-height: 1.5rem;
 }
@@ -97,25 +97,128 @@
 }
 
 .win-container {
-    height: 100vh;
     background-image: linear-gradient(#6FB6F1, #e9f2f6);
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+    z-index: 1000 !important;
+    padding: 4rem;
+}
+
+.img-top-right {
+    position: absolute;
+    top: -1rem;
+    right: 0;
+    z-index: -1000;
+    height: 70%;
+}
+
+.img-bottom-left{
+    position: absolute;
+    bottom: -1rem;
+    left: 0;
+    z-index: -1000;
+    height: 70%;
 }
 
 .win {
     height: 606px;
-    width: 920px;
-    background-color:rgba(255, 255, 255, 0.5);
-    border-radius: 40px;
+    width: 850px;
+    background-color:rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(12px);
+    border-radius: 50px;
     text-align: center;
-    padding: 2rem;
+    padding: 2.5rem;
+}
+
+.win-container > .win > h2 {
+    margin-bottom: 1.5rem;
 }
 
 .win-container > .win > h2 > span {
     color: var(--second-color);
 }
+
+.win-card-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 2.5rem;
+}
+
+.win-card {
+    border-radius: 25px;
+    padding: 1.3rem;
+    text-align: start;
+}
+
+
+.win-card-left {
+    background-image: linear-gradient(#FFB237, #FFE76A);
+    transform: rotate(-2deg);
+    box-shadow: 0px 4px 0px 0px #FDB74A;
+}
+
+.win-card-left > .win-card-content > p, .win-card-left > .win-card-content > h2 {
+    color: var(--h2-light-color);
+}
+
+
+.win-card-content > .win-svg {
+    text-align: end;
+}
+
+.win-card-content > p{
+    margin: 1rem 0;
+}
+
+.win-card-content > h2{
+    font-size: 40px;
+    font-weight: 500;
+}
+
+
+.win-card-right {
+    background-image: linear-gradient(#7645D9, #5121B1);
+    transform: rotate(2deg);
+    box-shadow: 0px 4px 0px 0px #3C1786;
+}
+
+.win-card-right > .win-card-content > .win-svg {
+    fill: white;
+}
+
+.win-card-right > .win-card-content > h2 {
+    color: var(--third-color);
+}
+
+.win-card-right > .win-card-content > p {
+    color: white;
+}
+
+.semi-bold {
+    font-weight: 600;
+}
+
+.win-button {
+    color: #ffffff;
+    background-color: var(--button-color);
+    width: 100%;
+    border: none;
+    border-radius: 15px;
+    font-weight: 600;
+    font-size: 16px;
+    padding: 0.5rem 0;
+    cursor: pointer;
+}
+
+.win-button:hover {
+    background-color: rgba(31, 199, 212, 0.6);
+    transition: 0.3s ease-in-out;
+}
+
 
 @media screen and (max-width: 850px) {
     .million-cards-container {
