--- a/style/style_alfio.css
+++ b/style/style_alfio.css
@@ -212,6 +212,14 @@
     font-size: 16px;
     padding: 0.5rem 0;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.win-button > svg {
+    fill: white;
+    margin-left: 0.5rem;
 }
 
 .win-button:hover {
