--- a/style/style_alfio.css
+++ b/style/style_alfio.css
@@ -254,7 +254,7 @@
         transform: translate(0, 0);
       }
       50% {
-        transform: translate(0, 10px);
+        transform: translate(5px, 10px);
       }
       100% {
         transform: translate(0, 0);
