--- a/style/header.css
+++ b/style/header.css
@@ -369,7 +369,7 @@ header {
   border-radius: 15px;
   font-size: 16px;
   font-weight: 500;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.1s ease-in-out;
   text-decoration: none;
   position: absolute;
   top: 60%;
@@ -383,7 +383,7 @@ header {
   border-radius: 15px;
   font-size: 16px;
   font-weight: 500;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.1s ease-in-out;
   text-decoration: none;
   position: absolute;
   top: 60%;
@@ -478,21 +478,26 @@ header {
   border-radius: 15px;
   font-size: 16px;
   font-weight: 500;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.1s ease-in-out;
   text-decoration: none;
 }
 .moon-btn2 {
   background-color: white;
   color: var(--button-color);
-  padding: 10px 25px;
+  padding: 10px 28px;
   border-radius: 15px;
   margin-left: 3px;
   font-size: 16px;
   font-weight: 500;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.1s ease-in-out;
   text-decoration: none;
   border: 2px var(--button-color) solid;
 }
 .head-btns{
-  margin-top: 30px;
+  margin-top: 35px;
+}
+.moon-btn:hover,
+.moon-btn2:hover{
+  opacity: 0.7;
+  cursor: pointer;
 }
