--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 @import url(./style/header.css);
 @import url('./style/style_alfio.css');
 @import url('./style/styleTrade.css');
+@import url(./style/style_gabriel.css);
 
 *{
     margin: 0;
