--- a/style/header.css
+++ b/style/header.css
@@ -132,8 +132,8 @@ header {
   position: sticky;
   top: 0%;
   left: 48%;
-  transform: translate(0%, 0%);
-  border-radius: 35px;
+  transform: translate(0.15%, 0%);
+  border-radius: 30px;
 }
 #space-bunny {
   width: 20%;
@@ -156,9 +156,11 @@ header {
 .slide2 .caption h2 {
   font-size: 40px;
   font-weight: 500;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
 }
 .slide2 .caption p {
   font-size: 20px;
+  text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.6);
 }
 #slide2-bunny {
   width: 26.9%;
@@ -232,7 +234,6 @@ header {
   width: 82%;
 }
 .framework-light {
-  content: "";
   background-image: linear-gradient(
     90deg,
     #ccc 0px,
@@ -248,11 +249,11 @@ header {
   animation-play-state: running;
 }
 @keyframes fadeInOut {
-  80% {
-    background-position: 100% 0;
-  }
   to {
     background-position: -100% 0;
+  }
+  80% {
+    background-position: 100% 0;
   }
 }
 
@@ -365,7 +366,7 @@ header {
 .head-btn {
   background-color: var(--button-color);
   color: #ffffff;
-  padding: 10px 20px;
+  padding: 10px 15px;
   border-radius: 15px;
   font-size: 16px;
   font-weight: 500;
@@ -375,6 +376,8 @@ header {
   top: 60%;
   left: 5%;
   transform: translate(-25%, 10%);
+  -webkit-box-shadow: 0px 2px 0px 0px #18a2ac, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: 0px 2px 0px 0px #18a2ac, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
 .head-btn2 {
   background-color: white;
@@ -388,7 +391,9 @@ header {
   position: absolute;
   top: 60%;
   left: 15%;
-  transform: translate(-35%, 10%);
+  transform: translate(-20%, 10%);
+  -webkit-box-shadow: 0px 2px 0px 0px #c9cdce, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: 0px 2px 0px 0px #c9cdce, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
 .head-btn:hover,
 .head-btn2:hover {
@@ -426,10 +431,23 @@ header {
   border-bottom-right-radius: 10px;
 }
 
-/* MOON SECTION */
+.cub-arrow {
+  position: relative;
+  top: 4px;
+  left: 5%;
+  transform: translate(0%, 0%);
+}
+
+.dx-arrow {
+  position: relative;
+  top: 4px;
+  left: 5%;
+  transform: translate(0%, 0%);
+}
+/* MOON SECTION -------------------------------------------------- */
 
 .moon {
-  background-color: #EBF6FF;
+  background-color: #ebf6ff;
   width: 100%;
   height: 88vh;
 }
@@ -484,9 +502,11 @@ header {
   font-weight: 500;
   transition: all 0.1s ease-in-out;
   text-decoration: none;
+  -webkit-box-shadow: 0px 1px 0px 0px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: 0px 1px 0px 0px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
 .moon-btn2 {
-  background-color: white;
+  background-color: transparent;
   color: var(--button-color);
   padding: 10px 28px;
   border-radius: 15px;
@@ -497,15 +517,15 @@ header {
   text-decoration: none;
   border: 2px var(--button-color) solid;
 }
-.head-btns{
+.head-btns {
   margin-top: 35px;
 }
 .moon-btn:hover,
-.moon-btn2:hover{
+.moon-btn2:hover {
   opacity: 0.7;
   cursor: pointer;
 }
-.round-background{
+.round-background {
   width: 100%;
   position: absolute;
   top: 98%;
